@@ -99,11 +99,13 @@ make install DESTDIR=%{buildroot}
 %{_bindir}/car
 %{_bindir}/scrub
 %{_bindir}/mdsum
+%{_bindir}/sockaddr
 %{_bindir}/zerofill
 %{_mandir}/man1/args.*
 %{_mandir}/man1/car.*
 %{_mandir}/man1/scrub.*
 %{_mandir}/man1/mdsum.*
+%{_mandir}/man1/sockaddr.*
 %{_mandir}/man1/zerofill.*
 
 %files devel
