@@ -91,11 +91,13 @@ html browsable.
 %{_bindir}/car
 %{_bindir}/scrub
 %{_bindir}/mdsum
+%{_bindir}/sockaddr
 %{_bindir}/zerofill
 %{_mandir}/man1/args.*
 %{_mandir}/man1/car.*
 %{_mandir}/man1/scrub.*
 %{_mandir}/man1/mdsum.*
+%{_mandir}/man1/sockaddr.*
 %{_mandir}/man1/zerofill.*
 
 %files devel
