@@ -1,0 +1,50 @@
+.\" sockaddr - list address resolution.
+.\" Copyright (c) 2010 David Sugar <dyfet@gnutelephony.org>
+.\"
+.\" This manual page is free software; you can redistribute it and/or modify
+.\" it under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation; either version 3 of the License, or
+.\" (at your option) any later version.
+.\"
+.\" This program is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\" GNU General Public License for more details.
+.\"
+.\" You should have received a copy of the GNU General Public License
+.\" along with this program; if not, write to the Free Software
+.\" Foundation, Inc.,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+.\"
+.\" This manual page is written especially for Debian GNU/Linux.
+.\"
+.TH sockaddr "1" "January 2010" "GNU uCommon" "GNU Telephony"
+.SH NAME
+sockaddr \- list address resolution.
+.SH SYNOPSIS
+.B sockaddr \fI[options]\fR \fIhost\fR \fIservice\fR
+.br
+.SH DESCRIPTION
+This command lists out the resolved (lookup) addresses for a given host
+and service name combination.  If multiple addresses are returned by
+the resolver, each valid address is listed.  Services can be specified by
+name or port number.
+.SH OPTIONS
+.TP
+\fB--udp\fR
+Lookup a udp service.
+.TP
+\fB--help\fR
+Outputs help screen for the user.
+.SH AUTHOR
+.B sockaddr
+was written by David Sugar <dyfet@gnutelephony.org>.
+.SH "REPORTING BUGS"
+Report bugs to bug-commoncpp@gnu.org.
+.SH COPYRIGHT
+Copyright \(co 2009 David Sugar, Tycho Softworks.
+.br
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR
+PURPOSE.
+
+
